qtdrahon/hd/lathe -add jog increments output pin

--- a/share/qtvcp/screens/qtdragon/qtdragon.ui
+++ b/share/qtvcp/screens/qtdragon/qtdragon.ui
@@ -10096,6 +10096,9 @@ MM/MIN</string>
                       <property name="frame">
                        <bool>true</bool>
                       </property>
+                      <property name="pinName" stdset="0">
+                       <string>jog-linear-increments</string>
+                      </property>
                      </widget>
                     </item>
                    </layout>
@@ -10211,6 +10214,9 @@ MM/MIN</string>
                       </property>
                       <property name="linear_option" stdset="0">
                        <bool>false</bool>
+                      </property>
+                      <property name="pinName" stdset="0">
+                       <string>jog-angular-increments</string>
                       </property>
                      </widget>
                     </item>
@@ -17784,7 +17790,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>11:58:51 PM</string>
+             <string>08:17:31 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
