qtdragon/hd/lathe -fix jog increments output pin spelling
increment not increments

--- a/share/qtvcp/screens/qtdragon/qtdragon.ui
+++ b/share/qtvcp/screens/qtdragon/qtdragon.ui
@@ -10097,7 +10097,7 @@ MM/MIN</string>
                        <bool>true</bool>
                       </property>
                       <property name="pinName" stdset="0">
-                       <string>jog-linear-increments</string>
+                       <string>jog-linear-increment</string>
                       </property>
                      </widget>
                     </item>
@@ -10216,7 +10216,7 @@ MM/MIN</string>
                        <bool>false</bool>
                       </property>
                       <property name="pinName" stdset="0">
-                       <string>jog-angular-increments</string>
+                       <string>jog-angular-increment</string>
                       </property>
                      </widget>
                     </item>
