--- a/share/qtvcp/screens/qtdragon_hd/qtdragon_hd.ui
+++ b/share/qtvcp/screens/qtdragon_hd/qtdragon_hd.ui
@@ -16100,7 +16100,7 @@ ANGULAR</string>
                   <bool>true</bool>
                  </property>
                  <property name="pinName" stdset="0">
-                  <string>jog-linear-increments</string>
+                  <string>jog-linear-increment</string>
                  </property>
                 </widget>
                </item>
@@ -16189,7 +16189,7 @@ ANGULAR</string>
                   <bool>false</bool>
                  </property>
                  <property name="pinName" stdset="0">
-                  <string>jog-angular-increments</string>
+                  <string>jog-angular-increment</string>
                  </property>
                 </widget>
                </item>
