docs -add a GUI dvelopment reference doc
Trying to get screens to use common INI entires etc.

--- a/docs/src/index.tmpl
+++ b/docs/src/index.tmpl
@@ -352,6 +352,7 @@ function setup_page(){
 		<li><a href="code/code-notes.html">Code Notes</a></li>
 		<li><a href="code/nml-messages.html">NML Messages</a></li>
 		<li><a href="code/style-guide.html">Style Guide</a></li>
+		<li><a href="gui/gui-dev-reference.html">GUI Development Reference</a></li>
 		<li><a href="code/adding-configs.html">Adding Configs for Selection</a></li>
 		<li><a href="code/contributing-to-linuxcnc.html">Contributing to LinuxCNC</a></li>
 		<li><a href="code/writing-tests.html">Writing tests for LinuxCNC</a></li>
