qtdragon_lathe -demo new bar styling
add widget names to the bars for easy styling

--- a/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
+++ b/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
@@ -14508,7 +14508,7 @@ SCROLL</string>
                           <number>0</number>
                          </property>
                          <item>
-                          <widget class="HalBar" name="hal_bar_2">
+                          <widget class="HalBar" name="hal_bar_x_load">
                            <property name="maximumSize">
                             <size>
                              <width>16777215</width>
@@ -14537,7 +14537,7 @@ SCROLL</string>
                           </widget>
                          </item>
                          <item>
-                          <widget class="HalBar" name="hal_bar_3">
+                          <widget class="HalBar" name="hal_bar_z_load">
                            <property name="maximumSize">
                             <size>
                              <width>16777215</width>
@@ -14630,6 +14630,9 @@ SCROLL</string>
                            </property>
                            <property name="text">
                             <string>Z LOAD</string>
+                           </property>
+                           <property name="textFormat">
+                            <enum>Qt::PlainText</enum>
                            </property>
                            <property name="alignment">
                             <set>Qt::AlignCenter</set>
@@ -16421,7 +16424,7 @@ SCROLL</string>
                 </widget>
                </item>
                <item row="3" column="0" colspan="2">
-                <widget class="HalBar" name="hal_bar">
+                <widget class="HalBar" name="hal_bar_spindle_load">
                  <property name="maximumSize">
                   <size>
                    <width>16777215</width>
@@ -16434,6 +16437,9 @@ SCROLL</string>
                    <green>50</green>
                    <blue>50</blue>
                   </color>
+                 </property>
+                 <property name="useMultiColorIndicator" stdset="0">
+                  <bool>false</bool>
                  </property>
                  <property name="setMaximum" stdset="0">
                   <number>100</number>
@@ -16547,7 +16553,7 @@ SCROLL</string>
                 </widget>
                </item>
                <item row="2" column="0" colspan="2">
-                <widget class="HalBar" name="hal_bar_4">
+                <widget class="HalBar" name="hal_bar_spindle_rpm">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
                    <horstretch>0</horstretch>
@@ -16575,6 +16581,9 @@ SCROLL</string>
                    <green>50</green>
                    <blue>50</blue>
                   </color>
+                 </property>
+                 <property name="useMultiColorIndicator" stdset="0">
+                  <bool>false</bool>
                  </property>
                  <property name="setMaximum" stdset="0">
                   <number>1000</number>
@@ -17859,7 +17868,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>08:29:17 PM</string>
+             <string>10:40:02 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -18295,8 +18304,8 @@ SCROLL</string>
    <slot>btn_dimensions_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>429</x>
-     <y>268</y>
+     <x>424</x>
+     <y>94</y>
     </hint>
     <hint type="destinationlabel">
      <x>0</x>
@@ -18807,8 +18816,8 @@ SCROLL</string>
    <slot>percent_loaded_changed()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>533</x>
-     <y>102</y>
+     <x>471</x>
+     <y>82</y>
     </hint>
     <hint type="destinationlabel">
      <x>484</x>
@@ -18915,8 +18924,8 @@ SCROLL</string>
   <slot>btn_systemtool_toggled()</slot>
  </slots>
  <buttongroups>
+  <buttongroup name="selectButtonGroup"/>
   <buttongroup name="page_buttonGroup"/>
   <buttongroup name="mode_buttonGroup"/>
-  <buttongroup name="selectButtonGroup"/>
  </buttongroups>
 </ui>
