gmoccapy: revert "added Gtk.Paned for upper main area"
For touch screens the sensitive area of the Gtk.Paned handle is expanded
by 50 px to each side. This makes it almost impossible to touch the DRO axes letters.

--- a/src/emc/usr_intf/gmoccapy/gmoccapy.glade
+++ b/src/emc/usr_intf/gmoccapy/gmoccapy.glade
@@ -799,14 +799,14 @@
                     <property name="can-focus">False</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <object class="GtkPaned" id="hbox2">
+                      <object class="GtkBox" id="hbox2">
                         <property name="visible">True</property>
-                        <property name="can-focus">True</property>
-                        <property name="wide-handle">True</property>
+                        <property name="can-focus">False</property>
                         <child>
                           <object class="GtkBox" id="vbox14">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
+                            <property name="margin-end">3</property>
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkNotebook" id="ntb_preview">
@@ -1238,8 +1238,9 @@
                             </child>
                           </object>
                           <packing>
-                            <property name="resize">True</property>
-                            <property name="shrink">True</property>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
@@ -1783,8 +1784,9 @@
                             </child>
                           </object>
                           <packing>
-                            <property name="resize">False</property>
-                            <property name="shrink">False</property>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                       </object>
