--- a/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
+++ b/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
@@ -3507,7 +3507,7 @@ PLATE</string>
                         <enum>QFrame::Raised</enum>
                        </property>
                        <property name="currentIndex">
-                        <number>10</number>
+                        <number>0</number>
                        </property>
                        <widget class="QWidget" name="stackedWidget_mainTabPage1">
                         <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -5074,20 +5074,8 @@ ROTATION</string>
                                  <verstretch>0</verstretch>
                                 </sizepolicy>
                                </property>
-                               <property name="frameShape">
-                                <enum>QFrame::NoFrame</enum>
-                               </property>
-                               <property name="frameShadow">
-                                <enum>QFrame::Plain</enum>
-                               </property>
-                               <property name="documentTitle">
-                                <string>Machine Log</string>
-                               </property>
-                               <property name="readOnly">
+                               <property name="machine_log_severity_option" stdset="0">
                                 <bool>true</bool>
-                               </property>
-                               <property name="placeholderText">
-                                <string>Machine Log</string>
                                </property>
                               </widget>
                              </item>
@@ -5117,21 +5105,6 @@ ROTATION</string>
                                  <horstretch>0</horstretch>
                                  <verstretch>0</verstretch>
                                 </sizepolicy>
-                               </property>
-                               <property name="frameShape">
-                                <enum>QFrame::NoFrame</enum>
-                               </property>
-                               <property name="frameShadow">
-                                <enum>QFrame::Plain</enum>
-                               </property>
-                               <property name="documentTitle">
-                                <string>Integrator Log</string>
-                               </property>
-                               <property name="readOnly">
-                                <bool>true</bool>
-                               </property>
-                               <property name="placeholderText">
-                                <string>Integrator Log</string>
                                </property>
                                <property name="integrator_log_option" stdset="0">
                                 <bool>true</bool>
@@ -17868,7 +17841,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>10:40:02 PM</string>
+             <string>12:33:34 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -17974,7 +17947,7 @@ SCROLL</string>
   </customwidget>
   <customwidget>
    <class>MachineLog</class>
-   <extends>QTextEdit</extends>
+   <extends>QWidget</extends>
    <header>qtvcp.widgets.machine_log</header>
   </customwidget>
   <customwidget>
