--- a/share/qtvcp/screens/qtplasmac_9x16/qtplasmac_9x16.ui
+++ b/share/qtvcp/screens/qtplasmac_9x16/qtplasmac_9x16.ui
@@ -2179,7 +2179,7 @@ ORIGIN</string>
                            </size>
                           </property>
                           <property name="text">
-                           <string>RELOAD</string>
+                           <string>RELOAD USER MANUAL</string>
                           </property>
                          </widget>
                         </item>
