--- a/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
+++ b/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
@@ -5238,7 +5238,7 @@ EDGE</string>
                            </size>
                           </property>
                           <property name="text">
-                           <string>RELOAD</string>
+                           <string>RELOAD USER MANUAL</string>
                           </property>
                          </widget>
                         </item>
