--- a/share/qtvcp/panels/qtplasmac_sim/qtplasmac_sim.ui
+++ b/share/qtvcp/panels/qtplasmac_sim/qtplasmac_sim.ui
@@ -161,6 +161,9 @@
         <height>23</height>
        </size>
       </property>
+      <property name="focusPolicy">
+       <enum>Qt::NoFocus</enum>
+      </property>
       <property name="text">
        <string>DOWN</string>
       </property>
@@ -207,6 +210,9 @@
         <width>54</width>
         <height>23</height>
        </size>
+      </property>
+      <property name="focusPolicy">
+       <enum>Qt::NoFocus</enum>
       </property>
       <property name="text">
        <string>UP</string>
